2023-09-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-otp-password-prompt-regexp): New defcustom.
	(tramp-action-otp-password): New defun.

	* tramp-sh.el (tramp-actions-before-shell)
	(tramp-actions-copy-out-of-band):
	Use `tramp-otp-password-prompt-regexp'.

2023-09-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-ls-file-attributes): New defconst.
	(tramp-do-file-attributes-with-ls): Use it.  (Bug#65324)

2023-09-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cmds.el (dired-advertise, dired-unadvertise): Declare.
	(tramp-dired-buffer-p, tramp-remote-process-p): Rename.
	(tramp-file-name-with-method): New defcustom.
	(tramp-file-name-with-sudo, tramp-revert-buffer-with-sudo): New defuns.

2023-09-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-perl-file-name-all-completions): Fix Perl
	script.  (Bug#65744)

2023-09-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-completion-methods): Make MULTI-HOP optional.

2023-09-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-multi-hop-methods): Fix :type.
	Add ;;;###tramp-autoload cookie.

	* tramp-container.el (tramp-completion-multi-hop-methods):
	Add methods properly.

2023-08-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-multi-hop-methods): Adapt docstring.
	Use nil as initial value.

	* tramp-container.el (tramp-completion-multi-hop-methods):
	Add "docker" and "podman".

2023-08-31  Gene Goykhman  <gene@indigo1.com>

	* tramp.el: Add custom variable `tramp-container-multi-hop-methods'.

	* tramp-container.el: Check if METHOD is a member of
	`tramp-container-multi-hop-methods' before attempting completion.

2023-08-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp--last-hop-directory): Adapt docstring.  Move down.
	(tramp-set-completion-function): Revert default case to
	`file-exists-p', the workaround isn't needed anymore.